--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,6 +1,6 @@
 header{
     width: 100%;
-    height: 60px;
+    height: 90px;
     background-color: #e25858;
     display: flex;
     align-items: center;
@@ -8,18 +8,20 @@ header{
 }
 
 .logo{
-    text-decoration: none;
-    font-size: 30px;
+    width: 180px;
+    height: 175px;
     cursor: pointer;
-    color: #FFF;
-    font-weight: bold;
 }
 
 .favoritos{
     text-decoration: none;
     cursor: pointer;
-    background-color: #FFF;
-    padding: 5px 14px;
+    padding: 8px 16px;
     color: #ffffff;
-    border-radius: 4px;
+    border: 1px solid;
+    border-color: #ffffff;
+    border-radius: 8px;
+}
+.favoritos:hover{
+    opacity: 0.3;
 }
