--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,7 +1,7 @@
 header{
     width: 100%;
     height: 90px;
-    background-color: #e25858;
+    background-color: #896A67;
     display: flex;
     align-items: center;
     justify-content: space-around;
